<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.raylemon.weather.ui.DetailActivityFragment">

    <TextView
        android:id="@+id/vDate"
        style="@style/TextAppearance.AppCompat.Display1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        tools:text="10 Fév 2016" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/vIcon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            tools:ignore="ContentDescription"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/vDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_xlarge"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:text="Nuageux" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/vMaxTemp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_xlarge"
            android:layout_weight="1"
            android:background="@color/warm"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            tools:text="30 °C" />

        <TextView
            android:id="@+id/vMinTemp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_xlarge"
            android:layout_weight="1"
            android:background="@color/frost"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            tools:text="20 °C" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_xlarge"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:text="@string/pressure"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/vPressure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.55"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:text="1,14hPa" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:text="@string/humidity"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/vHumidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.55"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:text="96%" />
        </LinearLayout>


    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="2">

        <TextView
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:gravity="center_horizontal"
            android:text="@string/morn"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <TextView
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:gravity="center_horizontal"
            android:text="@string/day"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <TextView
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:gravity="center_horizontal"
            android:text="@string/eve"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <TextView
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:gravity="center_horizontal"
            android:text="@string/night"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <TextView
            android:id="@+id/vMorn"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:background="@color/mid_warm"
            tools:text="22 °C" />

        <TextView
            android:id="@+id/vDay"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:background="@color/warm"
            tools:text="35 °C" />

        <TextView
            android:id="@+id/vEve"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:background="@color/mid_frost"
            tools:text="14 °C" />

        <TextView
            android:id="@+id/vNight"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:background="@color/frost"
            tools:text="7 °C" />

    </GridLayout>

</LinearLayout>
